@@ -1,3 +1,8 @@
+2015-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* README.solaris: New file from Mojca (without very long lines).
+	* Makefile.am: Add the new file.
+
 2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* version.ac (tex_live_version): starting pretest, no more /dev.
